# pulse

./: .gitignore  README.md  gen_icons.py  generate-icons.ps1  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  monitor.rs  store.rs  tray.rs
